// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="sc-QmDjo LGQWm"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <label
    className="sc-jSNUkj cHmuLD"
    size="small"
  >
    <input
      checked={true}
      className="sc-dMmSzc llCnaQ"
      id="test-switch-1"
      onChange={[Function]}
      size="small"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-fXywWY jqxBbk"
      size="small"
    />
  </label>
</div>
`;

exports[`Switch renders Buttons 1`] = `
Array [
  <div
    className="sc-QmDjo LGQWm"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-jSNUkj gtLhBG"
      size="medium"
    >
      <input
        checked={true}
        className="sc-dMmSzc llCnaQ"
        id="button-switch-1"
        onChange={[Function]}
        size="medium"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-fXywWY jSLyFv"
        size="medium"
      >
        <span
          className="sc-hEKtJR iUgwEd"
        >
          <p
            className="sc-cbDwiu cHxPAS"
            size={14}
          >
            Off
          </p>
          <p
            className="sc-cbDwiu cHxPAS"
            size={14}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>,
  <div
    className="sc-QmDjo LGQWm"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-jSNUkj bNbwOx"
      size="large"
    >
      <input
        checked={true}
        className="sc-dMmSzc llCnaQ"
        id="button-switch-2"
        onChange={[Function]}
        size="large"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-fXywWY jSLyFv"
        size="large"
      >
        <span
          className="sc-hEKtJR iUgwEd"
        >
          <p
            className="sc-cbDwiu cHxPAS"
            size={14}
          >
            Off
          </p>
          <p
            className="sc-cbDwiu cHxPAS"
            size={14}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>,
]
`;

exports[`Switch renders Disabled state 1`] = `
Array [
  <div
    className="sc-QmDjo LGQWm"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-jSNUkj cNLYja"
      disabled={true}
      size="small"
    >
      <input
        checked={true}
        className="sc-dMmSzc llCnaQ"
        id="test-switch-disabled-checked"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-fXywWY jqxBbk"
        size="small"
      />
    </label>
  </div>,
  <div
    className="sc-QmDjo LGQWm"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-jSNUkj cNLYja"
      disabled={true}
      size="small"
    >
      <input
        checked={false}
        className="sc-dMmSzc llCnaQ"
        id="test-switch-disabled"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={false}
        className="sc-fXywWY gNjZBc"
        size="small"
      />
    </label>
  </div>,
]
`;

exports[`Switch renders Theme variant 1`] = `
Array [
  <div
    className="sc-QmDjo LGQWm"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-jSNUkj OXfld"
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-dMmSzc Bagxd"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-fXywWY nuQkt"
        size="twoxsmall"
      />
    </label>
  </div>,
  <div
    className="sc-QmDjo LGQWm"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-jSNUkj dCqare"
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-dMmSzc kuqcxt"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-fXywWY LhLTq"
        size="xsmall"
      />
    </label>
  </div>,
  <div
    className="sc-QmDjo LGQWm"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-jSNUkj cHmuLD"
      size="small"
    >
      <input
        checked={true}
        className="sc-dMmSzc kuqcxt"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-fXywWY ABWXl"
        size="small"
      />
    </label>
  </div>,
]
`;

exports[`Switch renders different Sizes 1`] = `
Array [
  <div
    className="sc-QmDjo LGQWm"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-jSNUkj OXfld"
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-dMmSzc ivqCMY"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-fXywWY GocII"
        size="twoxsmall"
      />
    </label>
  </div>,
  <div
    className="sc-QmDjo LGQWm"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-jSNUkj dCqare"
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-dMmSzc llCnaQ"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-fXywWY ldmVJP"
        size="xsmall"
      />
    </label>
  </div>,
  <div
    className="sc-QmDjo LGQWm"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-jSNUkj cHmuLD"
      size="small"
    >
      <input
        checked={true}
        className="sc-dMmSzc llCnaQ"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-fXywWY jqxBbk"
        size="small"
      />
    </label>
  </div>,
]
`;
